--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
       <p class="rgb"></p>
       <div class="colors"></div>
       <div class="diff">
-        <span class="diff__btn active">6</span>
-        <span class="diff__btn">9</span>
+        <span id="a" class="diff__btn active">6</span>
+        <span id="b" class="diff__btn">9</span>
+      </div>
+      <div >
+        <button class="reset" type="button" onclick="resetGame()">RESET</button>
       </div>
     </main>
 
